# AFWrapper

./: .gitignore  AFHelper.cpp  AFHelper.h  CMakeLists.txt  build.sh  testArrayFire.cpp
